--- a/mecha-reactor/package.json
+++ b/mecha-reactor/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
+    "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
